@@ -23,6 +23,7 @@
 #define MPEGVIDEO_GOP12_START_CODE                0x000001b8
 /** Start code for a MPEG-1/-2 sequence header */
 #define MPEGVIDEO_SEQUENCE_START_CODE             0x000001b3
+#define MPEGVIDEO_EXT_START_CODE                  0x000001b5
 /** Start code for a MPEG-1 and -2 packet */
 #define MPEGVIDEO_PACKET_START_CODE               0x000001ba
 #define MPEGVIDEO_PROGRAM_STREAM_MAP              0xbc
